--- a/index.html
+++ b/index.html
@@ -8,66 +8,83 @@
       content="Creating Web-sites and Applications for your Business"
     />
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Page Header -->
-    <header>
-      <nav>
+    <header class="page-header">
+      <nav class="main-nav">
         <!-- Logo -->
-        <a href="/">WebStudio</a>
+        <a class="logo dark" href="/"><span>Web</span>Studio</a>
 
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="site-nav">
+          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="contacts">
+        <ul class="contact-list">
+          <li>
+            <a class="link" href="mailto:info@devstudio.com">
+              info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a class="link" href="tel:+110001111111"> +11 (000) 111-11-11 </a>
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
       <!-- Hero -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="section hero">
+        <h1 class="page-title">Effective Solutions for Your Business</h1>
 
-        <button type="button">Order Service</button>
+        <button class="button" type="button">Order Service</button>
       </section>
 
       <!-- Features -->
-      <section>
+      <section class="section">
         <!-- Hidden title, will be hidden using visually-hidden class -->
-        <h2>Features</h2>
+        <h2 class="visually-hidden">Features</h2>
 
-        <ul>
-          <li>
-            <h3>Strategy</h3>
+        <ul class="feature-list">
+          <li class="item">
+            <h3 class="title">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
+          <li class="item">
+            <h3 class="title">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
+          <li class="item">
+            <h3 class="title">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
+          <li class="item">
+            <h3 class="title">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -77,56 +94,130 @@
       </section>
 
       <!-- Our Team -->
-      <section>
-        <h2>Our Team</h2>
+      <section class="section team">
+        <h2 class="section-title">Our Team</h2>
 
-        <ul>
-          <li>
+        <ul class="team-list">
+          <li class="item">
             <img
               src="./images/mark-guerrero.jpg"
               alt="A smiling man in a blue shirt with dark hair"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="title">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/tom-ford.jpg"
               alt="A smiling man in a blue shirt with blond hair"
               width="264"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="title">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/camila-garcia.jpg"
               alt="Smiling girl in a pink sweater with long dark hair"
               width="264"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="title">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/daniel-wilson.jpg"
               alt="A smiling man in a gray T-shirt and blond hair"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="title">Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Our Portfolio -->
+      <section class="section">
+        <h2 class="section-title">Our Portfolio</h2>
+
+        <ul class="work-list">
+          <li class="item">
+            <img
+              src="./images/banking-app.jpg"
+              alt="Screenshots of BankApp"
+              width="360"
+            />
+            <a href="">
+              <h3 class="title">Banking App</h3>
+              <p>App</p>
+            </a>
+          </li>
+          <li class="item">
+            <img
+              src="./images/cashless-payment.jpg"
+              alt="A guy scanning QR-code with a phone"
+              width="360"
+            />
+            <a href="">
+              <h3 class="title">Cashless Payment</h3>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li class="item">
+            <img
+              src="./images/meditation-app.jpg"
+              alt="Notebook and phone with meditation app"
+              width="360"
+            />
+            <a href="">
+              <h3 class="title">Meditation App</h3>
+              <p>App</p>
+            </a>
+          </li>
+          <li class="item">
+            <img
+              src="./images/taxi-service.jpg"
+              alt="Driver in the car"
+              width="360"
+            />
+            <a href="">
+              <h3 class="title">Taxi Service</h3>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li class="item">
+            <img
+              src="./images/screen-illustrations.jpg"
+              alt="Phone with an illustrations on the screen"
+              width="360"
+            />
+            <a href="">
+              <h3 class="title">Screen Illustrations</h3>
+              <p>Design</p>
+            </a>
+          </li>
+          <li class="item">
+            <img
+              src="./images/online-courses.jpg"
+              alt="Happy girl in an orange sweater"
+              width="360"
+            />
+            <a href="">
+              <h3 class="title">Online Courses</h3>
+              <p>Marketing</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- Page Footer -->
-    <footer>
+    <footer class="page-footer">
       <!-- Logo -->
-      <a href="/">WebStudio</a>
+      <a class="logo light" href="/"><span>Web</span>Studio</a>
 
-      <p>
+      <p class="text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
