Fix logo and add classes

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <header class="page-header">
       <nav class="main-nav">
         <!-- Logo -->
-        <a class="logo dark" href="/"><span>Web</span>Studio</a>
+        <a class="logo dark" href="/">Web<span>Studio</span></a>
 
         <ul class="site-nav">
-          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="./index.html">Studio</a></li>
           <li><a class="link" href="">Portfolio</a></li>
           <li><a class="link" href="">Contacts</a></li>
         </ul>
@@ -59,33 +59,33 @@
       <!-- Features -->
       <section class="section">
         <!-- Hidden title, will be hidden using visually-hidden class -->
-        <h2 class="visually-hidden">Features</h2>
+        <h2 class="section-title">Features</h2>
 
         <ul class="feature-list">
           <li class="item">
             <h3 class="title">Strategy</h3>
-            <p>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="item">
             <h3 class="title">Punctuality</h3>
-            <p>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="item">
             <h3 class="title">Diligence</h3>
-            <p>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="item">
             <h3 class="title">Technologies</h3>
-            <p>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -105,7 +105,7 @@
               width="264"
             />
             <h3 class="title">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="text">Product Designer</p>
           </li>
           <li class="item">
             <img
@@ -114,7 +114,7 @@
               width="264"
             />
             <h3 class="title">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="text">Frontend Developer</p>
           </li>
           <li class="item">
             <img
@@ -123,7 +123,7 @@
               width="264"
             />
             <h3 class="title">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
           <li class="item">
             <img
@@ -132,7 +132,7 @@
               width="264"
             />
             <h3 class="title">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -150,7 +150,7 @@
             />
             <a href="">
               <h3 class="title">Banking App</h3>
-              <p>App</p>
+              <p class="text">App</p>
             </a>
           </li>
           <li class="item">
@@ -161,7 +161,7 @@
             />
             <a href="">
               <h3 class="title">Cashless Payment</h3>
-              <p>Marketing</p>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li class="item">
@@ -172,7 +172,7 @@
             />
             <a href="">
               <h3 class="title">Meditation App</h3>
-              <p>App</p>
+              <p class="text">App</p>
             </a>
           </li>
           <li class="item">
@@ -183,7 +183,7 @@
             />
             <a href="">
               <h3 class="title">Taxi Service</h3>
-              <p>Marketing</p>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li class="item">
@@ -194,7 +194,7 @@
             />
             <a href="">
               <h3 class="title">Screen Illustrations</h3>
-              <p>Design</p>
+              <p class="text">Design</p>
             </a>
           </li>
           <li class="item">
@@ -205,7 +205,7 @@
             />
             <a href="">
               <h3 class="title">Online Courses</h3>
-              <p>Marketing</p>
+              <p class="text">Marketing</p>
             </a>
           </li>
         </ul>
@@ -215,7 +215,7 @@
     <!-- Page Footer -->
     <footer class="page-footer">
       <!-- Logo -->
-      <a class="logo light" href="/"><span>Web</span>Studio</a>
+      <a class="logo light" href="/">Web<span>Studio</span></a>
 
       <p class="text">
         Increase the flow of customers and sales for your business with digital
