update logo styles and markup

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <header class="page-header">
       <nav class="main-nav">
         <!-- Logo -->
-        <a class="logo dark" href="/">Web<span>Studio</span></a>
+        <a class="logo" href="./index.html">
+          Web<span class="logo-accent dark">Studio</span>
+        </a>
 
         <ul class="site-nav">
           <li><a class="link" href="./index.html">Studio</a></li>
@@ -203,7 +205,9 @@
     <!-- Page Footer -->
     <footer class="page-footer">
       <!-- Logo -->
-      <a class="logo light" href="/">Web<span>Studio</span></a>
+      <a class="logo" href="./index.html">
+        Web<span class="logo-accent light">Studio</span>
+      </a>
 
       <p class="text">
         Increase the flow of customers and sales for your business with digital
